# cpr2ardour

./: .gitignore  README.md  drum-map.txt  pyproject.toml
docs/: cpr-format.md  roadmap.md  versionPlan.md
src/cpr2ardour/: binary.py  corpus.py  cpr.py  cprcorpus.py  cprinfo.py  cprtemp.py  main.py  playground.py  riff.py
tests/: test_audio_tracks.py  test_class_table.py  test_cpr.py  test_drum_map.py
tests/data/: Everyone Knows.csh  Sapphic3.cpr
